--- a/rating-service/rating-service/src/main/resources/application.yml
+++ b/rating-service/rating-service/src/main/resources/application.yml
@@ -4,3 +4,12 @@ server:
 spring:
   mongodb:
     uri: mongodb://localhost:27017/rating_db
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka
