--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -20,3 +20,9 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
+rating:
+  service:
+    baseUrl: http://RATING-SERVICE
+hotel:
+  service:
+    baseUrl: http://HOTEL-SERVICE
