--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -88,6 +88,11 @@
             <version>20210307</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
