--- a/hotel-service/hotel-service/src/main/resources/application.yml
+++ b/hotel-service/hotel-service/src/main/resources/application.yml
@@ -11,12 +11,15 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      default-zone: http://localhost:8761/eureka
+  config:
+    import: optional:configserver:http://localhost:8085
+  devtools:
+    add-properties: true
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      default-zone: http://localhost:8761/eureka
