--- a/rating-service/rating-service/src/main/resources/application.yml
+++ b/rating-service/rating-service/src/main/resources/application.yml
@@ -2,14 +2,19 @@ server:
   port: 8083
 
 spring:
+  profiles:
+    active:
+      - default
   mongodb:
     uri: mongodb://localhost:27017/rating_db
+  config:
+    import: optional:configserver:http://localhost:8085
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      default-zone: http://localhost:8761/eureka
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      default-zone: http://localhost:8761/eureka
