--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -14,15 +14,25 @@ spring:
   config:
     import: optional:configserver:http://localhost:8085
 
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#  client:
-#    fetch-registry: true
-#    register-with-eureka: true
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - '*'
+#resilience4j:
+#  circuitbreaker:
+#    instances:
+#      ratingHotelBreaker:
+#        register-health-indicator: true
+#        sliding-window-size: 10
+#        minimum-number-of-calls: 10
+#        failure-rate-threshold: 50
+#        wait-duration-in-open-state: 5s
+#        automatic-transition-from-open-to-half-open-enabled: true
+#        permitted-number-of-calls-in-half-open-state: 3
+#        sliding-window-type: COUNT_BASED
+#        event-consumer-buffer-size: 10
 
 rating:
   service:
